--- a/layout3.html
+++ b/layout3.html
@@ -22,18 +22,18 @@
 	</div>
 	<div class="parent_div">
 		<div class="div1">
-			<h1 class="blog">Blog Post Title</h1>
-			<span class="by">by</span>
-			<span class="test">Test</span>
+			<div><h1 class="blog">Blog Post Title</h1></div>
+			<div>
+				<span class="by">by</span>
+				<span class="test">Test</span>
+			</div>
 			<div class="top_line"></div>
 			<div class="clock">
 				<i class="fa fa-clock-o"></i><span id="clock_span">Posted on August 24,2013 at 9:00 PM</span>
 			</div>
-			<div class="second_line"></div>
 			<div class="img">
 				<img src="img3.png">
 			</div>
-			<div class="lower_line"></div>
 			<div class="content">
 				<h1>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed 		do eiusmod
@@ -78,7 +78,6 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer"></div>
 	<div class="copyright">
 		<p>Copyright &copy Your Website 2014</p>
 	</div>
